[metadata]
name = cockpit
url = https://github.com/f-dangel/cockpit
description = A Practical Debugging Tool for Training Deep Neural Networks.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long-description-content-type = text/markdown
author = Frank Schneider and Felix Dangel
author-email = f.schneider@uni-tuebingen.de
license = MIT
keywords = deep-learning, machine-learning, debugging
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
# Define which packages are required to run
install_requires =
    json-tricks
    matplotlib
    numpy
    pandas
    scipy
    seaborn
    torch
    backpack-for-pytorch>=1.3.0
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm

[flake8]
# Configure flake8 linting, minor differences to pytorch.
select = B,C,E,F,P,W,B9
max-line-length = 80
max-complexity = 10
ignore =
	# replaced by B950 (max-line-length + 10%)
	E501, # max-line-length
	# ignored because pytorch uses dict
	C408, # use {} instead of dict()
	# Not Black-compatible
	E203, # whitespace before :
	E231, # missing whitespace after ','
	W291, # trailing whitespace
	W503, # line break before binary operator
	W504, # line break after binary operator
exclude = docs,docs_src,build,.git,src,tex

[pydocstyle]
convention = google
# exclude directories, see
# https://github.com/PyCQA/pydocstyle/issues/363#issuecomment-625563088
match_dir = ^(?!(docs|docs_src|build|.git|src|exp)).*
match = .*\.py

[isort]
profile=black

[darglint]
docstring_style = google
# short, long, full
strictness = short